<resources>
    <string name="app_name">HW03</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_health_rec">Add Health Record</string>
    <string name="no_records">No Records Available</string>
    <string name="name">Name:</string>
    <string name="date_birth">Date Of Birth:</string>
    <string name="phone">Phone:</string>
    <string name="first_last_name">FirstName LastName</string>
    <string name="dob_hint">MM/DD/YY</string>
    <string name="phone_no">Phone number</string>
    <string name="how_feel">How Are You Feeling:</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="out_of_10">Out Of 10</string>
    <string name="not_well">Not Well</string>
    <string name="sad">Sad</string>
    <string name="ok">OK</string>
    <string name="good">Good</string>
    <string name="very_good">Very Good</string>
    <string name="delete">Delete</string>
    <string name="feeling">Feeling: </string>
    <string name="age">Age: </string>
    <string name="valid_name">Please Enter Valid Name</string>
    <string name="valid_dob">Please Enter Valid DOB</string>
    <string name="valid_phone">Please Enter Valid Phone Number</string>
    <string name="rate">Please Rate how you are Feeling from 1 to 10</string>

</resources>